# libltc

./: .gitattributes  .gitignore  CMakeLists.txt  ChangeLog  Doxyfile.in  Makefile.am  README  README.md  annotated.html  autogen.sh  build-deb.sh  classes.html  configure.ac  deprecated.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_e68e8157741866f444e17edd764ebbae.html  example_encode_8c-example.html  examples.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  libltcConfig.cmake.in  ltc.pc.in  ltc_8h.html  ltc_8h_source.html  ltcdecode_8c-example.html  ltcencode_8c-example.html  mainpage_8dox.html  menudata.js  meson.build  meson_options.txt  pages.html  params.json  (+1 more)
debian/: changelog  control  copyright  libltc-doc.install
doc/: Makefile.am  mainpage.dox
doc/man/man3/: ltc.h.3
src/: Makefile.am  Makefile.msc  decoder.c  decoder.h  encoder.c  encoder.h  libltc.def  libltc.rc  ltc.c  ltc.h  meson.build  smpte.c  timecode.c
tests/: Makefile.am  example_encode.c  expect_48k_2sec.txt  expect_96k_2sec.txt  ltcdecode.c  ltcencode.c  ltcloop.c  meson.build  test.sh  timecode.raw  timecode.txt
